partial/force-app/main/default/objects/Unit_Preference__c/Unit_Preference__c.object-meta.xml
<CustomObject>
    <label>Unit Preference</label>
    <nameField>
        <displayFormat>UTP-{00000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>