partial/force-app/main/default/objects/Unit_Preference__c/fields/Secondary_Marcket__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Marcket__c</fullName>
    <formula>Unit__r.Secondary_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Marcket?</label>
    <type>Checkbox</type>
</CustomField>