partial/force-app/main/default/objects/Unit_Preference__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>