partial/force-app/main/default/objects/Unit_Preference__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Unit__c.Unit_Availability__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Preferences</relationshipLabel>
    <relationshipName>Unit_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>