partial/force-app/main/default/objects/Unit_Preference__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <formula>Unit__r.Project_Unit_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Type</label>
    <type>Text</type>
</CustomField>