partial/force-app/main/default/objects/Unit_Preference__c/listViews/Reapit_Data.listView-meta.xml
<ListView>
    <fullName>Reapit_Data</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unique_Identifier__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>4/17/2023 12:00 AM</value>
    </filters>
    <label>Reapit Data</label>
</ListView>